tests/specs/ecosystem/lightbery/light_server_rendering/1_0_1.test
lightbery/light-server-rendering/1.0.1
-- deno.lock --

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /Light-Server-Rendering/Modules/Element.ts:28:14
   | 
28 |   public get id () {return this._id}
   |              ^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /Light-Server-Rendering/Modules/Element.ts:29:14
   | 
29 |   public get parent () {return this._parent}
   |              ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /Light-Server-Rendering/Modules/Element.ts:30:14
   | 
30 |   public get attributes () {
   |              ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /Light-Server-Rendering/Modules/Element.ts:36:14
   | 
36 |   public get innerHTML () {return this._innerHTML}
   |              ^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /Light-Server-Rendering/Modules/Element.ts:37:14
   | 
37 |   public get style () {
   |              ^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /Light-Server-Rendering/Modules/Element.ts:44:25
   | 
44 |   public set innerHTML (value) {
   |                         ^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /Light-Server-Rendering/Modules/Page.ts:15:14
   | 
15 |   public get head () {return this._head}
   |              ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /Light-Server-Rendering/Modules/Page.ts:16:14
   | 
16 |   public get body () {return this._body}
   |              ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


